<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>gaius_console_automation_framework</groupId>
	<artifactId>gaius_console_automation_framework</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>gaius_console_automation_framework</name>
	<!-- FIXME change it to the project's website -->
	<url>http://www.example.com</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<playwright-version>1.27.1</playwright-version>
		<extentreports-version>5.0.9</extentreports-version>
		<testng-version>7.6.1</testng-version>
		<commons-io-version>2.11.0</commons-io-version>
	</properties>

	<dependencies>

		<dependency>
			<groupId>com.microsoft.playwright</groupId>
			<artifactId>playwright</artifactId>
			 <version>${playwright-version}</version>
		</dependency>

		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>${testng-version}</version>
			<scope>compile</scope>
		</dependency>


		<dependency>
			<groupId>com.aventstack</groupId>
			<artifactId>extentreports</artifactId>
			<version>${extentreports-version}</version>
		</dependency>
	<dependency>
   	 	<groupId>commons-io</groupId>
    	<artifactId>commons-io</artifactId>
    	<version>${commons-io-version}</version>
	</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>


			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M7</version>
			<!--<dependencies>
			 <dependency>
            		<groupId>org.apache.maven.surefire</groupId>
            		<artifactId>surefire-testng</artifactId>
            		<version>2.21.0</version>
            </dependency>
            </dependencies>-->
				<configuration>
					<forkCount>0</forkCount>
					<reuseForks>true</reuseForks>
					<!--<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>-->
					<suiteXmlFiles>
						<suiteXmlFile>src/test/resources/testrunners/testng_regressions.xml</suiteXmlFile>
						<!-- <suiteXmlFile>${suiteXmlFile}</suiteXmlFile> -->
					</suiteXmlFiles>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>